# case-organizer

./: .gitignore  QUICK_START.md  README.md  README_CN.md  pyproject.toml
case_organizer/: __init__.py  cli.py  config.py  logging.py
case_organizer/exporters/: __init__.py  csv_exporter.py  json_exporter.py
case_organizer/extract/: __init__.py  archive_resolver.py  document_normalizer.py  local_readers.py  mineru_client.py  mineru_runner.py
case_organizer/models/: case_data.py  document.py
case_organizer/normalize/: __init__.py  fact_extractor.py  template_mapper.py
case_organizer/review/: __init__.py  app.py  case_layout.py  storage.py  wizard_service.py
case_organizer/review/static/: wizard.css  wizard.js
case_organizer/review/templates/: index.html  wizard.html
case_organizer/scanner/: __init__.py  file_index.py  file_scanner.py  file_types.py
docs/: TEAM_HANDOFF.md  output-contract.md
tests/: test_archive_resolver.py  test_case_layout_cli.py  test_case_wizard_service.py  test_cli_smoke.py  test_csv_exporter.py  test_document_normalizer.py  test_fact_extractor.py  test_file_index.py  test_file_scanner.py  test_local_readers.py  test_pipeline_smoke.py  test_review_app.py
