[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-organizer"
version = "0.1.0"
description = "Local-first patient case organizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
  "uvicorn>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.3"
]

[project.scripts]
case-organizer = "case_organizer.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["case_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
